feat: fiz o path do deleteConta
