# src/docs/swagger.json
@@ -329,7 +329,8 @@
               "newCliente": {
                 "value": {
                   "codCliente": 3,
-                  "email": "franciscoMonteiro@gmail.com"
+                  "name": "Francisco Monteiro",
+                  "image": "https://image.shutterstock.com/image-vector/user-icon-trendy-flat-style-260nw-418179865.jpg"
                   }
                 }
               }
@@ -795,6 +796,44 @@
                       },
                       "createdAt": {
                         "type": "date"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }     
+    },
+    "/conta/delete/{codCliente}": {
+      "delete": {
+        "summary": "Deletar a contar.",
+        "description": "Essa rota permite o usuário deletar a conta.",
+        "tags": ["Deletar a conta."],
+        "security": [{ "bearerAuth": [] }],
+        "parameters": [
+          {
+            "name": "codCliente",
+            "in": "path",
+            "description": "identificador do cliente.",
+            "required": true
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized."
+          },
+          "204": {
+            "description": "No Content",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "itens": {
+                    "type": "object",
+                    "properties": {
+                      "message": {
+                        "type": "string"
                       }
                     }
                   }
